# optimization

./: AbstractArea.h  AbstractCriterion.h  AbstractOptimizationMethod.h  CMakeLists.txt  EpsilonCriterion.cpp  EpsilonCriterion.h  EuclidNormCriterion.cpp  EuclidNormCriterion.h  EuclidNormFunCriterion.cpp  EuclidNormFunCriterion.h  Function.h  Function1.cpp  Function1.h  Function2.cpp  Function2.h  Function3.cpp  Function3.h  FunctionImplementation.cpp  FunctionImplementation.h  FunctionOptimize.cpp  FunctionOptimize.h  NelderMeadOptimization.cpp  NelderMeadOptimization.h  OptimizationResult.cpp  OptimizationResult.h  RandomSearch.cpp  RandomSearch.h  SpecialNMCriterion.cpp  SpecialNMCriterion.h  SquareArea.cpp  SquareArea.h  Utils.h  main.cpp
documentation/html/: _abstract_area_8h_source.html  _abstract_criterion_8h_source.html  _abstract_optimization_method_8h_source.html  _epsilon_criterion_8h_source.html  _euclid_norm_criterion_8h_source.html  _function_8h_source.html  _function_optimize_8h_source.html  _nelder_mead_optimization_8h_source.html  _optimization_result_8h_source.html  _random_search_8h_source.html  _square_area_8h_source.html  annotated.html  annotated_dup.js  class_abstract_area-members.html  class_abstract_area.html  class_abstract_area.js  class_abstract_criterion-members.html  class_abstract_criterion.html  class_abstract_criterion.js  class_abstract_optimization_method-members.html  class_abstract_optimization_method.html  class_abstract_optimization_method.js  class_epsilon_criterion-members.html  class_epsilon_criterion.html  class_epsilon_criterion.js  class_euclid_norm_criterion-members.html  class_euclid_norm_criterion.html  class_euclid_norm_criterion.js  class_function-members.html  class_function.html  class_function.js  class_function_optimize-members.html  class_function_optimize.html  class_function_optimize.js  class_nelder_mead_optimization-members.html  (+28 more)
(+97 files in other folders)
